Change swagger and trad analytiques to analytics
